# sky-scanner

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
apps/api/: pyproject.toml
apps/api/src/sky_scanner_api/: __init__.py  config.py  dependencies.py  main.py
apps/api/src/sky_scanner_api/cache/: __init__.py  cache_keys.py  redis_client.py  stale_while_revalidate.py
apps/api/src/sky_scanner_api/crawl/: __init__.py  alternative_airports.py  dispatcher.py
apps/api/src/sky_scanner_api/middleware/: __init__.py  rate_limit.py
apps/api/src/sky_scanner_api/routers/: airlines.py  airports.py  auth.py  natural_search.py  prediction.py  prices.py  search.py  users.py
apps/api/src/sky_scanner_api/schemas/: airlines.py  airports.py  auth.py  common.py  natural_search.py  prediction.py  prices.py  search.py  users.py
apps/api/src/sky_scanner_api/services/: airline_service.py  airport_service.py  auth_service.py  natural_search_service.py  personalization_service.py  prediction_service.py  price_service.py  search_service.py  user_service.py
apps/crawler/: pyproject.toml
apps/crawler/src/sky_scanner_crawler/: __init__.py  base.py  celery_app.py  cli.py  config.py  rate_limiter.py  retry.py  tasks.py
apps/crawler/src/sky_scanner_crawler/air_busan/: __init__.py  client.py  crawler.py  response_parser.py
apps/crawler/src/sky_scanner_crawler/air_france_klm/: __init__.py  client.py  crawler.py  response_parser.py  sputnik_client.py  sputnik_parser.py
apps/crawler/src/sky_scanner_crawler/air_nz/: __init__.py  client.py  crawler.py  response_parser.py
apps/crawler/src/sky_scanner_crawler/air_premia/: __init__.py  client.py  crawler.py  l2_client.py  response_parser.py
apps/crawler/src/sky_scanner_crawler/air_seoul/: __init__.py  client.py  crawler.py  l3_client.py  response_parser.py
apps/crawler/src/sky_scanner_crawler/amadeus_gds/: __init__.py  client.py  crawler.py  response_parser.py
apps/crawler/src/sky_scanner_crawler/ana/: __init__.py  client.py  crawler.py  response_parser.py  sputnik_client.py  sputnik_parser.py
apps/crawler/src/sky_scanner_crawler/cathay_pacific/: __init__.py  client.py  crawler.py  response_parser.py
apps/crawler/src/sky_scanner_crawler/eastar_jet/: __init__.py  client.py  crawler.py  response_parser.py
apps/crawler/src/sky_scanner_crawler/emirates/: __init__.py  client.py  crawler.py  response_parser.py
apps/crawler/src/sky_scanner_crawler/ethiopian_airlines/: __init__.py  client.py  crawler.py  response_parser.py
apps/crawler/src/sky_scanner_crawler/eva_air/: __init__.py  client.py  crawler.py  response_parser.py
apps/crawler/src/sky_scanner_crawler/google/: __init__.py  cookie_manager.py  crawler.py  fetcher.py  html_parser.py  js_parser.py  protobuf_builder.py
apps/crawler/src/sky_scanner_crawler/hainan_airlines/: __init__.py  client.py  crawler.py  response_parser.py
apps/crawler/src/sky_scanner_crawler/jal/: __init__.py  client.py  crawler.py  response_parser.py
apps/crawler/src/sky_scanner_crawler/jeju_air/: __init__.py  client.py  crawler.py  response_parser.py
apps/crawler/src/sky_scanner_crawler/jin_air/: __init__.py  client.py  crawler.py  response_parser.py
apps/crawler/src/sky_scanner_crawler/kiwi/: __init__.py  client.py  crawler.py  response_parser.py
apps/crawler/src/sky_scanner_crawler/lot_polish/: __init__.py  client.py  crawler.py  response_parser.py
apps/crawler/src/sky_scanner_crawler/lufthansa_group/: __init__.py  client.py  crawler.py  response_parser.py
apps/crawler/src/sky_scanner_crawler/malaysia_airlines/: __init__.py  client.py  crawler.py  response_parser.py
apps/crawler/src/sky_scanner_crawler/philippine_airlines/: __init__.py  client.py  crawler.py  response_parser.py
apps/crawler/src/sky_scanner_crawler/pipeline/: __init__.py  merger.py  store.py
apps/crawler/src/sky_scanner_crawler/qatar_airways/: __init__.py  client.py  crawler.py  response_parser.py
apps/crawler/src/sky_scanner_crawler/singapore_airlines/: __init__.py  client.py  crawler.py  response_parser.py  sputnik_client.py  sputnik_parser.py
apps/crawler/src/sky_scanner_crawler/thai_airways/: __init__.py  client.py  crawler.py  l2_client.py  l2_parser.py  response_parser.py
apps/crawler/src/sky_scanner_crawler/turkish_airlines/: __init__.py  client.py  crawler.py  l3_client.py  response_parser.py
apps/crawler/tests/: conftest.py  test_e2e_crawlers.py
apps/scheduler/: pyproject.toml
apps/scheduler/src/sky_scanner_scheduler/: __init__.py  beat_schedule.py  celery_app.py  config.py  route_config.py
(+59 files in other folders)
