[project]
name = "sky-scanner"
version = "0.1.0"
description = "Personalized flight price scanner with multi-source parallel crawling"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "ty>=0.0.1",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.25.0",
    "pre-commit>=4.0.0",
]


[tool.uv.workspace]
members = [
    "packages/*",
    "apps/api",
    "apps/crawler",
    "apps/scheduler",
]

# ---------- ruff ----------
[tool.ruff]
line-length = 88
target-version = "py313"
indent-width = 4

exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "references",
    "apps/web",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # Pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = [
    "sky_scanner_core",
    "sky_scanner_db",
    "sky_scanner_ml",
    "sky_scanner_api",
    "sky_scanner_crawler",
    "sky_scanner_scheduler",
]

[tool.ruff.format]
docstring-code-format = true

# ---------- ty ----------
[tool.ty]

[tool.ty.src]
include = ["packages/*/src", "apps/*/src"]

# ---------- pytest ----------
[tool.pytest.ini_options]
testpaths = ["tests", "packages/*/tests", "apps/*/tests"]
asyncio_mode = "auto"
addopts = "--cov --cov-report=term-missing -q"

[tool.coverage.run]
source = [
    "packages/core/src",
    "packages/db/src",
    "packages/ml/src",
    "apps/api/src",
    "apps/crawler/src",
    "apps/scheduler/src",
]

[tool.coverage.report]
skip_empty = true
show_missing = true
