[project]
name = "sky-scanner-crawler"
version = "0.1.0"
description = "4-Layer parallel flight data crawler engine"
requires-python = ">=3.13"
dependencies = [
    "sky-scanner-core",
    "sky-scanner-db",
    "playwright>=1.50.0",
    "selectolax>=0.3.0",
    "httpx>=0.28.0",
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
    "primp>=0.14.0",
    "protobuf>=5.27.0",
    "pydantic-settings>=2.0.0",
    "click>=8.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sky_scanner_crawler"]

[tool.uv.sources]
sky-scanner-core = { workspace = true }
sky-scanner-db = { workspace = true }
